--- a/index.html
+++ b/index.html
@@ -16,80 +16,97 @@
       href="https://devchallenges.io/"
     />
 
+    <link rel="stylesheet" href="./styles/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
 
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <title>TeamPage Devchallenges</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
+    <header class="main-header">
+      <h2>The creative crew</h2>
 
+      <div>
+        <h4>Who are we</h4>
         <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
+          We are team of creatively, diverse, driven. <br />
+          innovative individuals working in various <br />
+          locations from the world.
         </p>
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+    </header>
+    <main class="main-main">
+      <section class="main-section">
+        <div class="cards">
+          <ul class="lst-members">
+            <li class="lst-members-item">
+              <div>
+                <img
+                  src="./assets//images/photo1.png"
+                  alt=" Team Member profile picture "
+                />
+                <span>Product Owner</span>
+              </div>
+              <strong>Bill Mahoney</strong>
+            </li>
+            <li class="lst-members-item">
+              <div>
+                <img
+                  src="./assets//images/photo2.png"
+                  alt=" Team Member profile picture "
+                />
+                <span>Art Director</span>
+              </div>
+              <strong> Saba Cabrera </strong>
+            </li>
+            <li class="lst-members-item">
+              <div>
+                <img
+                  src="./assets//images/photo3.png"
+                  alt=" Team Member profile picture "
+                />
+                <span>Tech Lead</span>
+              </div>
+              <strong>Shae Le</strong>
+            </li>
+            <li class="lst-members-item">
+              <div>
+                <img
+                  src="./assets//images/photo4.png"
+                  alt=" Team Member profile picture "
+                />
+                <span>UX Designer</span>
+              </div>
+              <strong>Skylah Lu</strong>
+            </li>
+            <li class="lst-members-item">
+              <div>
+                <img
+                  src="./assets//images/photo5.png"
+                  alt=" Team Member profile picture "
+                />
+                <span>Developer</span>
+              </div>
+              <strong>Griff Richards</strong>
+            </li>
+            <li class="lst-members-item">
+              <div>
+                <img
+                  src="./assets//images/photo6.png"
+                  alt=" Team Member profile picture "
+                />
+                <span>Developer</span>
+              </div>
+              <strong>Stan Jonh</strong>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <p>Created by mariovarela99 - devChallenges.io</p>
+    </footer>
   </body>
 </html>
